adds more mobile styles, including hero title overlay style

--- a/grow.html
+++ b/grow.html
@@ -7,7 +7,7 @@ permalink: /grow/
 
 <!-- Hero -->
 {% include hero.html
-title="Grow Your Reach"
+title="Empower your team, Grow Your Reach"
 subtitle="Strengthen Your Systems & Lead With Confidence."
 image="/assets/images/pages/grow/grow2.jpg"
 cta_text="Get In Touch"
@@ -36,7 +36,7 @@ cta_url="/contact"
     </div>
     <div class="bento-container">
       {% include feature.html
-      title="Build Your Strategy"
+      title="Marketing Strategy"
       description="Reach the right people and share your message clearly. We help you grow your digital presence in a way that feels aligned with your values and capacity. From email marketing and newsletters to social media planning, SEO, and story-driven digital marketing."
       image="/assets/images/pages/grow/strategy2.jpg"
       image_alt="Digital Strategy Planning"
@@ -46,7 +46,7 @@ cta_url="/contact"
       %}
 
       {% include feature.html
-      title="Set Up the Right Tools"
+      title="Digital Transformation"
       description="Technology should support your work—not add to your stress. We help you find and implement digital tools that support communication, organization, and collaboration. Whether it's Google Workspace, Microsoft 365, Slack, or project management tools like Notion, Trello, and Asana."
       image="/assets/images/pages/grow/setup1.jpg"
       image_alt="Digital Tools Setup"
@@ -55,7 +55,7 @@ cta_url="/contact"
       %}
 
       {% include feature.html
-      title="Support Your Team"
+      title="Training & Support"
       description="We provide onboarding, training, and documentation to ensure your team feels confident and supported. From staff onboarding and documentation to one-on-one or team training sessions and ongoing tech coaching for long-term confidence."
       image="/assets/images/pages/grow/team-support.jpg"
       image_alt="Team Support and Training"
