--- a/build.html
+++ b/build.html
@@ -5,7 +5,7 @@ permalink: /build/
 ---
 <!-- Hero -->
 {% include hero.html
-title="Build"
+title="Establish your online presence"
 subtitle="Your website is often the first place people connect with your work."
 image="/assets/images/pages/build/hero-build.jpg"
 %}
@@ -68,8 +68,8 @@ image="/assets/images/pages/build/hero-build.jpg"
 </section>
 
 <!-- Section -->
-<section class="">
-  <div class="bg-light">
+<section class="bg-light">
+  <div class="container ">
     <div class="heading-container">
       <h2>Why Rize?</h2>
       <p class="subtitle">
