fixes connect links

--- a/grow.html
+++ b/grow.html
@@ -11,7 +11,7 @@ title="Empower your team, Grow Your Reach"
 subtitle="Strengthen Your Systems & Lead With Confidence."
 image="/assets/images/pages/grow/grow2.jpg"
 cta_text="Get In Touch"
-cta_url="/contact"
+cta_url="/connect"
 %}
 
 <!-- Section -->
@@ -77,5 +77,5 @@ cta_url="/contact"
 title="Reach further and work smarter"
 text="We help you strengthen your digital strategy and set up internal systems that make your work smoother, more organized, and more effective. Let’s grow your impact from the inside out."
 button_text="Plan Your Growth"
-link="/contact?type=build"
+link="/connect?type=build"
 %}
