--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: Rize Digital
 
 <!-- Hero -->
 {% include hero.html
-title="Together, We Rize!"
-subtitle="Rize Digital is a technology company dedicated to empowering community-driven organizations and helping changemakers thrive."
+title="Together, We Rize"
+subtitle="Subheading:We help community-driven organizations and changemakers use technology to thrive—through websites, workshops, strategy, and systems that work for real people."
 image="/assets/images/pages/home/hero-home.jpg"
 cta_text="Get In Touch"
-cta_url="/contact"
+cta_url="/connect"
 %}
 
 
@@ -152,5 +152,5 @@ cta_url="/contact"
 title="Let's Work Together!"
 text="Have a project in mind? Curious how we can help? Fill out our form to get started."
 button_text="Start a Conversation"
-button_url="/contact"
+button_url="/connect"
 %}
