--- a/learn.html
+++ b/learn.html
@@ -10,7 +10,7 @@ title="Digital Skills for Work & Life"
 subtitle="Lead With Confidence.Workshops and training that help communities build digital confidence. Whether you're a small business, a nonprofit team, or a family learning together, we teach the skills that make technology feel approachable, useful, and empowering."
 image="/assets/images/pages/learn/learn3.jpg"
 cta_text="Get In Touch"
-cta_url="/contact"
+cta_url="/connect"
 %}
 
 <section class="bg-red">
@@ -37,7 +37,7 @@ cta_url="/contact"
       image="/assets/images/pages/learn/workshops.jpg"
       image_alt="Team Workshop Session"
       button_text="Book a Team Session"
-      button_url="/contact?type=team"
+      button_url="/connect?type=team"
       %}
 
       {% include feature.html
@@ -46,7 +46,7 @@ cta_url="/contact"
       image="/assets/images/pages/learn/learn2.jpg"
       image_alt="Community Education Workshop"
       button_text="Book a Community Workshop"
-      button_url="/contact?type=community"
+      button_url="/connect?type=community"
       reverse=true
       %}
 
@@ -56,7 +56,7 @@ cta_url="/contact"
       image="/assets/images/pages/learn/career.jpg"
       image_alt="Tech Skills Training"
       button_text="Start a Career-Focused Session"
-      button_url="/contact?type=career"
+      button_url="/connect?type=career"
       %}
     </div>
   </div>
@@ -99,5 +99,5 @@ cta_url="/contact"
 title="Grow your digital confidence"
 text="We offer workshops and training that meet you where you are—whether you're just getting started or expanding your skills. For individuals, teams, or entire communities, we'll help you navigate tech with clarity and care."
 button_text="Book a Workshop or Session"
-link="/contact?type=build"
+link="/connect?type=build"
 %}
