--- a/build.html
+++ b/build.html
@@ -122,5 +122,5 @@ image="/assets/images/pages/build/hero-build.jpg"
 title="Ready to bring your vision online?"
 text="Whether you're launching a new website, setting up an online shop, or rebuilding your digital presence with accessibility in mind — we're here to help you build something strong, beautiful, and easy to manage."
 button_text="Start Your Build"
-link="/contact?type=build"
+link="/connect?type=build"
 %}
