--- a/connect.html
+++ b/connect.html
@@ -112,5 +112,5 @@ social_links="true"
 title="Let's start with a conversation"
 text="Have a project in mind? Curious how we might work together? Tell us what you're thinking — we'll follow up with next steps, resources, or a consultation."
 button_text="Start a Conversation"
-link="/contact?type=build"
+link="/connect?type=build"
 %}
