adds homepage and other content, bento styles for mobile

--- a/grow.html
+++ b/grow.html
@@ -69,12 +69,9 @@ cta_url="/connect"
 </section>
 
 
-<!-- Section -->
-
-
 <!-- CTA Section -->
 {% include cta.html
-title="Reach further and work smarter"
+title="Reach further & work smarter"
 text="We help you strengthen your digital strategy and set up internal systems that make your work smoother, more organized, and more effective. Let’s grow your impact from the inside out."
 button_text="Plan Your Growth"
 link="/connect?type=build"
