more content for connect page

--- a/connect.html
+++ b/connect.html
@@ -8,10 +8,9 @@ permalink: /connect/
 
 <!-- Hero -->
 {% include hero.html
-title="Together, we Rize!"
-subtitle="Lead With Confidence."
+title="Connection is Where it All Begins"
+subtitle="If you’re doing good work in your community, we want to hear from you. Let’s explore how we can help you grow your impact through thoughtful digital support."
 image="/assets/images/pages/connect/connect.jpg"
-social_links="true"
 %}
 
 
@@ -32,43 +31,39 @@ social_links="true"
       {% include feature.html
       title="Community Rooted"
       description="We don't just work in communities—we work with them. Our approach is grounded in listening, learning, and building relationships. By staying culturally informed and people-centered, we create digital solutions that reflect the strengths, voices, and values of the communities we serve."
-      image="/assets/images/pages/home/navigate-digital.jpg"
+      image="/assets/images/pages/connect/community.jpg"
       image_alt="Community Partnerships"
       button_text="Explore Our Services"
       button_url="/services"
-      icon="🌾"
       reverse=true
       %}
 
       {% include feature.html
       title="Empowerment Through Education"
       description="We believe that knowledge should be shared, not gatekept. Whether through workshops, one-on-one support, or clear documentation, we help clients build skills and confidence that last."
-      image="/assets/images/pages/home/digital-presence.jpg"
+      image="/assets/images/pages/connect/education.jpg"
       image_alt="Community Partnerships"
       button_text="Learn More"
       button_url="#"
-      icon="🌱"
       %}
 
       {% include feature.html
       title="Technology for Good"
       description="We use digital tools to uplift—not extract. Our approach is grounded in digital sovereignty, safe and healthy online spaces, real-world wellbeing, and sustainability to build a better future for communities and the planet."
-      image="/assets/images/pages/home/plan-purpose.jpg"
+      image="/assets/images/pages/connect/do-good1.jpg"
       image_alt="Community Partnerships"
       button_text="Learn More"
       button_url="#"
-      icon="🌿"
       reverse=true
       %}
 
       {% include feature.html
       title="Innovation with Intention"
       description="We believe in using the right tools—not just the newest ones. Our choices are driven by your goals, not trends or hype. Whether it's a simple website or a custom solution, we make sure the technology fits your needs and helps you do what you do best."
-      image="/assets/images/pages/home/empower-your-team.jpg"
+      image="/assets/images/pages/connect/innovation.jpg"
       image_alt="Community Partnerships"
       button_text="Learn More"
       button_url="#"
-      icon="🚀"
       %}
     </div>
   </div>
@@ -78,17 +73,13 @@ social_links="true"
 <section>
   <div class="container">
     <div class="bento-grid bento-grid--feature reverse">
-      <div class="bento-section bento-image-wrapper ">
-        <img src="/assets/images/pages/connect/max-thinks.jpg" class="bento-image circle" />
+      <div class="bento-section bento-image-wrapper">
+        <img src="/assets/images/pages/connect/max-harris.jpg" alt="Max Harris, founder of Rize Digital" class="circle" />
       </div>
       <div class="bento-section">
         <h2>Your Digital Partner</h2>
-        <p>I'm Max Harris — a web developer, educator, and community-minded technologist based in Vancouver. After more than a decade working in fast-paced startups and marketing teams, I made a conscious decision: to use my skills to serve the communities that matter most to me.</p>
-        <p>That's what Rize Digital is all about.</p>
-        <p>As a Black technologist with deep ties to Indigenous communities through my family, I understand that access to digital tools and knowledge isn't equal — but it should be. I've taught web development to learners from all walks of life, built accessible websites for nonprofits, and helped entrepreneurs bring their ideas online with confidence.</p>
-        <p>Now, I'm bringing that experience to Rize Digital — to support small businesses, non-profits, and community organizations through thoughtful web development, culturally-informed digital strategy, and hands-on education.
-          Whether you need a website, a workshop, or a roadmap for digital transformation, I'm here to build with you — not just for you.
-          Let's rise together.
+        <p>
+          Max Harris is the founder of Rize Digital — a web developer, instructor, and community technologist based in Vancouver. With over a decade of experience in the tech industry, Max brings a deep commitment to culturally informed, accessible digital work. His passion lies in supporting nonprofits, entrepreneurs, and community organizations to build confidence with digital tools and create impact that lasts.
         </p>
       </div>
     </div>
