adds feature section circle image

--- a/connect.html
+++ b/connect.html
@@ -9,10 +9,9 @@ permalink: /connect/
 <!-- Hero -->
 {% include hero.html
 title="Connection is Where it All Begins"
-subtitle="If you’re doing good work in your community, we want to hear from you. Let’s explore how we can help you grow your impact through thoughtful digital support."
+subtitle="Let’s explore how we can help you grow your impact through thoughtful digital support."
 image="/assets/images/pages/connect/connect.jpg"
 %}
-
 
 <section class="bg-red">
   <div class="container">
