--- a/index.html
+++ b/index.html
@@ -45,6 +45,48 @@ cta_url="/connect"
     </div>
   </div>
 </section>
+<section>
+  <div class="container-full-width">
+    <div class="bento-grid bento-grid--feature reverse">
+      <div class="bento-section">
+        <img
+          src="/assets/images/pages/build/jump.jpg"
+          alt="Community Partnerships"
+          class="bento-image" />
+      </div>
+      <div class="bento-section">
+        <div class="heading-container--sm">
+          <h3>About Rize Digital</h3>
+        </div>
+        <div class="about-content">
+          <p class="intro">
+            Rize Digital is a community-first consultancy that helps organizations use technology with confidence and clarity. We believe in digital tools that are accessible, culturally informed, and grounded in real needs—not trends.
+          </p>
+
+          <h4>We are committed to:</h4>
+          <ul class="">
+            <li>Empowering people through education</li>
+            <li>Creating inclusive and accessible design</li>
+            <li>Supporting nonprofits and underrepresented communities</li>
+            <li>Using tech to uplift, not extract</li>
+            <li>Building long-term relationships with care and accountability</li>
+          </ul>
+
+          <p class="location">
+            Based in Vancouver, we serve clients across Canada.
+          </p>
+
+          <div class="land-acknowledgment">
+            <h4>Land Acknowledgment</h4>
+            <p>We are grateful to live and work on the unceded territories of the Musqueam, Squamish, and Tsleil-Waututh Nations.</p>
+          </div>
+
+          <a href="/connect" class="button">Connect With Us →</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <section class="bg-red">
   <div class="container">
@@ -104,15 +146,9 @@ cta_url="/connect"
 
 <section>
   <div class="container-full-width">
-    <div class="bento-grid bento-grid--feature reverse">
-      <div class="bento-section">
-        <img
-          src="/assets/images/pages/build/work2.jpg"
-          alt="Community Partnerships"
-          class="bento-image" />
-      </div>
-      <div class="bento-section">
-        <div class="heading-container--sm">
+    <div class="bento-grid bento-grid--one-col">
+      <div class="bento-section bg-light">
+        <div class="heading-container">
           <h3>We Work With</h3>
         </div>
         <ul class="bento-list bento-grid--two-col">
