--- a/learn.html
+++ b/learn.html
@@ -64,14 +64,14 @@ cta_url="/contact"
 
 <section>
   <div class="container-full-width">
-    <div class="bento-grid reverse">
+    <div class="bento-grid bento-grid--two-col reverse">
       <div class="bento-section">
         <img
           src="/assets/images/pages/learn/workshops.jpg"
           alt="Community Partnerships"
           class="bento-image" />
       </div>
-      <div class="bento-section bg-red">
+      <div class="bento-section  bg-red">
         <div class="heading-container--sm">
           <h3>Workshops</h3>
         </div>
