--- a/build.html
+++ b/build.html
@@ -5,7 +5,7 @@ permalink: /build/
 ---
 <!-- Hero -->
 {% include hero.html
-title="Establish your online presence"
+title="Build your online presence"
 subtitle="Your website is often the first place people connect with your work."
 image="/assets/images/pages/build/hero-build.jpg"
 %}
@@ -13,6 +13,7 @@ image="/assets/images/pages/build/hero-build.jpg"
 <!-- Section -->
 <section class="bg-red">
   <div class="container">
+    <h2>Take Up Space</h2>
     <p>
       Whether you're a nonprofit, a small business, or a community-led project, we'll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
     </p>
@@ -75,44 +76,6 @@ image="/assets/images/pages/build/hero-build.jpg"
       <p class="subtitle">
         We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to "do it all" — and we build websites that work for real people, not just ideal scenarios.
       </p>
-    </div>
-  </div>
-</section>
-
-<section>
-  <div class="container-full-width">
-    <div class="bento-grid bento-grid--feature reverse">
-      <div class="bento-section">
-        <img
-          src="/assets/images/pages/build/work2.jpg"
-          alt="Community Partnerships"
-          class="bento-image" />
-      </div>
-      <div class="bento-section">
-        <div class="heading-container--sm">
-          <h3>We Work With</h3>
-        </div>
-        <ul class="bento-list bento-grid--two-col">
-          <li>
-            Nonprofits
-          </li>
-          <li>
-            Artists
-          </li>
-          <li>
-            Entrepreneurs
-          </li>
-          <li>
-            Educational Organizations
-          </li>
-          <li>
-            Social Enterprises
-          </li>
-          <li>
-            Families
-          </li>
-        </ul>
-      </div>
     </div>
   </div>
 </section>
