--- a/build.html
+++ b/build.html
@@ -5,8 +5,8 @@ permalink: /build/
 ---
 <!-- Hero -->
 {% include hero.html
-title="Build your online presence"
-subtitle="Your website is often the first place people connect with your work."
+title="Take up space"
+subtitle="Get your website, e-commerce, and digital precense up and running with guidance from our team."
 image="/assets/images/pages/build/hero-build.jpg"
 %}
 
@@ -43,7 +43,7 @@ image="/assets/images/pages/build/hero-build.jpg"
       image_alt="Community Partnerships"
       button_text="Explore Our Services"
       button_url="/services"
-      reverse=true
+      feature_class="reverse bg-dark"
       %}
 
       {% include feature.html
@@ -62,7 +62,7 @@ image="/assets/images/pages/build/hero-build.jpg"
       image_alt="Community Partnerships"
       button_text="Learn More"
       button_url="#"
-      reverse=true
+      feature_class="reverse bg-dark"
       %}
     </div>
   </div>
