--- a/grow.html
+++ b/grow.html
@@ -28,7 +28,6 @@ cta_url="/connect"
       button_url="/services/strategy"
       feature_class="bg-dark reverse"
       %}
-
     </div>
   </div>
 </section>
@@ -47,7 +46,7 @@ cta_url="/connect"
       image_alt="Digital Strategy Planning"
       button_text="Plan Your Outreach"
       button_url="/services/strategy"
-      reverse=true
+      feature_class="reverse bg-dark"
       %}
 
       {% include feature.html
@@ -66,7 +65,7 @@ cta_url="/connect"
       image_alt="Team Support and Training"
       button_text="Empower Your Team"
       button_url="/services/support"
-      reverse=true
+      feature_class="reverse bg-dark"
 
       %}
     </div>
