--- a/learn.html
+++ b/learn.html
@@ -47,7 +47,7 @@ cta_url="/contact"
       image_alt="Community Education Workshop"
       button_text="Book a Community Workshop"
       button_url="/contact?type=community"
-      reverse=true
+      feature_class="reverse bg-dark"
       %}
 
       {% include feature.html
