--- a/rize.html
+++ b/rize.html
@@ -17,7 +17,7 @@ image_alt="Digital Tools Setup"
 button_text="Streamline Your Tools"
 button_url="/services/tools"
 icon="✦"
-reverse=true
+feature_class="reverse bg-dark"
 services="Google Workspace, Microsoft 365, Slack setup and support|Project management with Notion, Trello, Asana, etc.|Custom tool recommendations based on your needs"
 %}
 
@@ -54,7 +54,7 @@ services="Staff onboarding and documentation|One-on-one or team training session
       image_alt="Digital Tools Setup"
       button_text="Streamline Your Tools"
       button_url="/services/tools"
-      reverse=true
+      feature_class="reverse bg-dark"
       %}
 
       {% include feature.html
