--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ cta_url="/connect"
       image_alt="Building digital presence"
       button_text="Start Your Build"
       button_url="/build"
-      reverse=true
+      feature_class="reverse bg-dark"
       %}
 
       {% include feature.html
@@ -138,7 +138,7 @@ cta_url="/connect"
       image_alt="Growing and scaling"
       button_text="Let's Grow Together"
       button_url="/grow"
-      reverse=true
+      feature_class="reverse bg-dark"
       %}
     </div>
   </div>
