adds cta image and styles

--- a/build.html
+++ b/build.html
@@ -27,7 +27,7 @@ image="/assets/images/pages/build/hero-build.jpg"
 <section>
   <div class="container column">
     <div class="heading-container">
-      <h2>We Build</h2>
+      <h2>Let's Build</h2>
       <p class="subtitle">
         Whether you're a nonprofit, a small business, or a community-led project, we'll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
       </p>
