--- a/connect.html
+++ b/connect.html
@@ -91,6 +91,24 @@ image="/assets/images/pages/connect/connect.jpg"
     </div>
   </div>
 </section>
+<section class="">
+  <div class="bento-container">
+    <div class="bento-grid bento-grid--feature  bg-dark">
+      <div class="bento-section text-container">
+        <h4>Land Acknowledgment</h4>
+        <p class="location">
+          Based in Vancouver, we serve clients across Canada.
+        </p>
+        <p>We are grateful to live and work on the unceded territories of the Musqueam, Squamish, and Tsleil-Waututh Nations.</p>
+      </div>
+      <div class="bento-image-wrapper">
+        <img src="/assets/images/pages/home/land.jpg" class="bento-image circle" />
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 <!-- CTA Section -->
 {% include cta.html
