Adds some mobile styles

--- a/connect.html
+++ b/connect.html
@@ -15,8 +15,12 @@ image="/assets/images/pages/connect/connect.jpg"
 
 
 <section>
-  <div>###</div>
-  {% include contact-form.html %}
+  <div class="container-full-width">
+    <div class="bento-image-wrapper">
+      <img src="/assets/images/pages/connect/jump.jpg" class="bento-image circle" />
+    </div>
+    {% include contact-form.html %}
+  </div>
 </section>
 
 <section class="bg-red">
