--- a/build.html
+++ b/build.html
@@ -12,14 +12,13 @@ image="/assets/images/pages/build/hero-build.jpg"
 
 <!-- Section -->
 <section class="bg-red">
-  <div class="container">
-    <h2>Take Up Space</h2>
-    <p>
-      Whether you're a nonprofit, a small business, or a community-led project, we'll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
-    </p>
-    <p>
-      We don't just build beautiful websites—we make sure you understand how to manage and update them, so you can stay in control of your presence online.
-    </p>
+  <div class="container ">
+    <div class="heading-container">
+      <h2>Why Rize?</h2>
+      <p class="subtitle">
+        We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to "do it all" — and we build websites that work for real people, not just ideal scenarios.
+      </p>
+    </div>
   </div>
 </section>
 
@@ -70,11 +69,14 @@ image="/assets/images/pages/build/hero-build.jpg"
 
 <!-- Section -->
 <section class="bg-light">
-  <div class="container ">
-    <div class="heading-container">
-      <h2>Why Rize?</h2>
+  <div class="container">
+    <h2>Case Studies</h2>
+    <div class="coming-soon-container">
       <p class="subtitle">
-        We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to "do it all" — and we build websites that work for real people, not just ideal scenarios.
+        We're currently curating our portfolio of impactful projects. Check back soon to see how we've helped organizations like yours achieve their digital goals.
+      </p>
+      <p>
+        In the meantime, feel free to <a href="/connect?type=build" class="text-link">reach out</a> to discuss your project and see how we can help bring your vision to life.
       </p>
     </div>
   </div>
