--- a/connect.html
+++ b/connect.html
@@ -81,7 +81,7 @@ image="/assets/images/pages/connect/connect.jpg"
 </section>
 
 <!-- Section Bio -->
-<section class="">
+<section class="bg-light">
   <div class="container">
     <div class="bento-container">
       {% include feature.html
